--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - test-docker
   - pull-data
   - build-databases
+  - build-curating
 
 build_docker_image:
   stage: docker
@@ -30,3 +31,12 @@ build-databases:
     - changes:
       - data/*.dvc
       - src/1_gathering/db/**/*
+
+
+build-curating:
+  stage: build-curating
+  script:
+    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make curating"
+  rules:
+    - changes:
+      - data/*.dvc
