[Kotlin] The fabulous entrance of Kotlin in the project. This should build (and do it fast)
Of course maybe it is completely broken, but I had no way to compare.

So… enjoy the added complexity while I sleep.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ bin/gnfinder
 ci_env
 default.profraw
 callgrind.*
+/src/2_curating/2_editing/organism/subscripts/2_translating_organism_kotlin/.gradle/
+/.gradle/
+/src/2_curating/2_editing/organism/subscripts/2_translating_organism_kotlin/build/
+.idea
