--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ callgrind.*
 /.gradle/
 /src/2_curating/2_editing/organism/subscripts/2_translating_organism_kotlin/build/
 .idea
+ __pycache__/
+ *.pyc
