[CI] adding build  translation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,14 @@ build-databases:
       - data/*.dvc
       - src/1_gathering/db/**/*
 
+build-translation:
+  stage: build-translation
+  script:
+    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make gathering-translation-full"
+  rules:
+    - changes:
+      - data/*.dvc
+      - src/1_gathering/translation/**/*
 
 build-curating:
   stage: build-curating
