--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build-databases:
     - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make gathering-databases"
   rules:
     - changes:
-      - data/*.dvc
+      - data/external.dvc
       - src/1_gathering/db/**/*
 
 build-translation:
@@ -39,7 +39,7 @@ build-translation:
     - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make gathering-translation-full"
   rules:
     - changes:
-      - data/*.dvc
+      - data/external.dvc
       - src/1_gathering/translation/**/*
 
 build-curating:
