--- a/environment_loose.yml
+++ b/environment_loose.yml
@@ -10,6 +10,10 @@ dependencies:
   - cirpy
   - requests
   - grequests
+  - urllib.parse
+  - tdqm
+  - sys
+  - gzip
   - r-pacman
   - r-ggalluvial
   - r-ggfittext
